--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -18,9 +18,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Run tests
+    - name: run tests
       run: sbt test
     - name: Archive benchmark results
       uses: actions/upload-artifact@v2
       with:
-        path: assets/bench.png
+        path: assets/benchIris.png
+    - name: publish artifact
+      run: sbt +publish
+
