--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,6 +23,10 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         path: benchIris.png
-    - name: publish artifact
-      run: sbt +publish
-
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    steps:
+        - name: deploy app
+        - run: sbt +publish
