--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -29,4 +29,4 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
         - name: deploy app
-        - run: sbt +publish
+          run: sbt +publish
