--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -26,7 +26,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master'
+#    if: github.ref == 'refs/heads/master'
     steps:
         - name: deploy app
           run: sbt +publish
