work to publish artifact

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         path: benchIris.png
     - name: deploy app
-      if: github.ref == 'refs/heads/master'
+#      if: github.ref == 'refs/heads/master'
       run: sbt +publish
 #  publish:
 #    runs-on: ubuntu-latest
