--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,13 +24,5 @@ jobs:
       with:
         path: benchIris.png
     - name: deploy app
-#      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/master'
       run: sbt +publish
-#  publish:
-#    runs-on: ubuntu-latest
-#    needs: build
-##    if: github.ref == 'refs/heads/master'
-#    steps:
-#        - name: deploy app
-#          if: github.ref == 'refs/heads/master'
-#          run: sbt +publish
