--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -21,8 +21,6 @@ jobs:
       run: sbt test
     - name: Archive benchmark results
       uses: actions/upload-artifact@v2
-      with:
-        path: benchIris.png
-    - name: deploy app
       if: github.ref == 'refs/heads/master'
-      run: sbt +publish
+      with:
+        path: assets
